# bazel_java

./: MODULE.bazel  README.md  WORKSPACE  pom.xml
bazel/: build.sh  repositories.bzl
src/main/java/javacpp/: MyFunc.java  MyFuncTest.java
src/main/java/javacpp/heu/: Ciphertext.java  Constants.java  PheKit.java  SchemaType.java
src/main/java/javacpp/preset/: heu.java
src/main/native/javacpp/: BUILD.bazel
src/main/native/javacpp/heu/: BUILD.bazel  phe_kit.cc  phe_kit_test.cc
src/main/native/javacpp/util/: BUILD.bazel
src/test/java/javacpp/: PheKitTest.java
