###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "bazel_java",
    repo_name = "bazel_java",
)

# =========================================
# Bazel module dependencies
# =========================================
bazel_dep(name = "rules_cuda", version = "0.2.3")
bazel_dep(name = "googletest", version = "1.15.2")