# Copyright 2024 dterazhao, Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
cc_library(
    name = "phe_kit",
    srcs = ["phe_kit.cc"],
    hdrs = ["phe_kit.h"],
    deps = [
        "@com_dtera_heu//heu/library/phe",
    ],
)

cc_static_library(
    name = "phe_kit_all",
    deps = [
        ":phe_kit",
        "@com_github_libtom_libtommath//:libtommath",
    ],
)

cc_test(
    name = "phe_test",
    srcs = ["phe_kit_test.cc"],
    deps = [
        ":phe_kit",
        "//src/main/native/javacpp/util:stopwatch",
        "@com_google_googletest//:gtest_main",
    ],
)
